feature: SEO optimization and add preloader

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Aplicación de búsqueda de productos" />
+  <meta name="keywords" content="Mercado Libre, Productos en venta, Comprar en línea, Búsqueda de productos, Tienda en línea, Ofertas en Mercado Libre, Catálogo de productos, Envío gratis, Descuentos en productos, Venta de productos, Tienda virtual, Compras por internet, Artículos en venta, Mejores precios, Últimas novedades, Ofertas especiales, Productos destacados, Comparar precios, Categorías de productos, Comprar barato online." />
+  <meta name="robots" content="index, follow" />
   <title>TEST FRONTEND</title>
 </head>
 
